# devloop

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  canary.md  config-reference.md
examples/: config.toml  devloop.toml  plan.md
src/devloop/: __init__.py  __main__.py  artifacts.py  canary.py  checks.py  cli.py  config.py  git_ops.py  json_protocol.py  models.py  observability.py  plan_parser.py  prompts.py  report.py  runner.py  stop_conditions.py  subprocess_utils.py
src/devloop/adapters/: base.py  cli_agent.py
tests/: __init__.py  helpers.py  test_artifacts.py  test_canary.py  test_checks.py  test_cli.py  test_cli_agent.py  test_config.py  test_git_ops.py  test_json_protocol.py  test_observability.py  test_plan_parser.py  test_prompts.py  test_report.py  test_runner_edges.py  test_runner_observability.py  test_runner_smoke.py  test_stop_conditions.py  test_subprocess_utils.py
