[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project]
name = "devloop"
version = "0.1.0"
description = "A two-agent implementation and audit loop for git repositories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
]

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "ruff>=0.11,<1",
]

[project.scripts]
devloop = "devloop.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
